trunk/test/T2/Fail/T2_noExpression.ic
class Test{
	void foobar(){
		1 + 2;
	}
}